kubernetes/flux-system/receiver/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: public
      namespace: kube-system
      sectionName: https
  hostnames:
    - "flux-webhook.eviljungle.com"
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
